--- a/assets/styles.css
+++ b/assets/styles.css
@@ -224,3 +224,9 @@ a:hover {
         width: calc(100% - 4rem); /* Adjust width for 2rem padding on each side */
     }
 }
+
+.question-body-text {
+    font-size: 1.125rem; /* This sets the font size to 18px */
+    margin-bottom: 1rem;
+    color: #334155;
+}
